--- a/aman_portfolio/.env
+++ b/aman_portfolio/.env
@@ -1,7 +1,7 @@
- VITE_MONGODB_URI=https://anam-portfolio-2.onrender.com
+# VITE_MONGODB_URI=https://anam-portfolio-2.onrender.com
 
 
-# VITE_MONGODB_URI=http://localhost:4000
+VITE_MONGODB_URI=http://localhost:4000
 
 require mongoDB string
 require gmail 
