--- a/aman_portfolio/package.json
+++ b/aman_portfolio/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tailwindcss/vite": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.80.10",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -35,12 +35,13 @@
     "recharts": "^3.1.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.14",
     "three": "^0.177.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^24.7.2",
     "@types/react": "^19.1.8",
     "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^19.1.6",
@@ -51,6 +52,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
